changes for update api and fix for email
