# src/main/resources/api-spec.yaml
@@ -13,7 +13,7 @@ tags:
 
 paths:
 
-  /api/drivers:
+  /drivers:
     post:
       tags:
         - drivers
@@ -31,6 +31,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DriverResponse'
+    get:
+      tags:
+        - drivers
+      summary: Get a paginated list of drivers
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+          description: Page number (starts from 0)
+        - name: size
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
+            minimum: 1
+          description: Number of items per page
+        - name: sortBy
+          in: query
+          required: false
+          schema:
+            type: string
+            example: "name"
+          description: Sorting format (e.g., 'name' or 'status')
+        - name: direction
+          in: query
+          required: false
+          schema:
+            type: string
+            example: "asc"
+          description: Sorting format (e.g., 'asc' or 'desc')
+      responses:
+        "200":
+          description: Paginated list of drivers
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaginatedDriversResponse"
 
   /drivers/{driverId}:
     get:
@@ -72,7 +114,11 @@ paths:
               $ref: "#/components/schemas/DriverUpdateRequest"
       responses:
         "200":
-          description: Driver updated successfully
+          description: Driver details updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DriverResponse"
         "400":
           description: Invalid request data
         "404":
@@ -98,8 +144,22 @@ components:
       properties:
         name:
           type: string
+          example: "John Doe"
+        email:
+          type: string
+          format: email
+          example: "johndoe@example.com"
         phone:
           type: string
+          example: "+1234567890"
+        licenseNumber:
+          type: string
+          example: "DL12345678"
+        status:
+          type: string
+          enum: ["AVAILABLE", "ON_TRIP","SUSPENDED"]
+          example: "AVAILABLE"
+
     DriverResponse:
       type: object
       properties:
@@ -153,3 +213,18 @@ components:
           type: string
           nullable: true
           example: "MH12MN1234"
+    PaginatedDriversResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/DriverResponse"
+        totalElements:
+          type: integer
+        totalPages:
+          type: integer
+        size:
+          type: integer
+        number:
+          type: integer
